@@ -1,3 +1,10 @@
+2006-04-09
+	* corrected bug (failed prepare_notify in handle_new_subscription caused
+	watcher destroying but he wasn't removed from presentity's watcher list)
+
+2006-03-09
+	* updated DB manipulation functions
+
 2006-07-26
 	* first step for PIDF extensions support (storing/loading into/from DB not
 	finished yet)
